--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@capacitor/android": "^5.5.1",
 		"@capacitor/cli": "^5.5.1",
 		"@capacitor/core": "^5.5.1",
-		"@capacitor/ios": "^5.5.1"
+		"@capacitor/ios": "^5.5.1",
+		"firebase": "^10.7.1"
 	}
 }
