setup manuall deployment

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "vite build",
 		"build:ios": "vite build && npx cap run ios",
 		"build:android": "vite build && npx cap run android",
+		"deploy": "npm run build && firebase deploy",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
