--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,14 @@ node_modules
 .env
 .env.*
 !.env.example
+
+# VITE
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+
+# PLATFORMS
+/android
+/ios
+
+
