--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
 	"theme_color": "#e4887e",
-	"background_color": "#3b3b5f",
+	"background_color": "#6c8ab9",
 	"display": "fullscreen",
 	"scope": "/",
 	"start_url": "/",
